# openeo-processes-dask-ml

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  slurm_ml.config.sample
examples/: make_embeddings.ipynb  make_embeddings.py  train_rf.py
examples/mlm_items/: prithvi_v2_item.json  terramind_item.json
examples/training_data/: train_data_small.json
minibackend/: custom_processes.py  openeo_minibackend.py
ml_datacube_bridge/output_preprocessing_functions/: torch_vit_encoder_tools.py
opd_ml_dev_utils/: get_datacube.py
openeo_processes_dask_ml/model_execution/: _argparser.py  _file_chunk.py  run_pytorch_model.py  run_sklearn_model.py
openeo_processes_dask_ml/process_implementations/: __init__.py  constants.py  exceptions.py  init_models.py  load_embeddings.py  load_model.py  ml_fit.py  ml_predict.py  save_embeddings.py  save_ml_model.py
openeo_processes_dask_ml/process_implementations/data_model/: __init__.py  data_model.py  scikit_learn_model.py  torch_model.py
openeo_processes_dask_ml/process_implementations/overrides/: README.md  __init__.py  aggregate.py  aggregate_spatial.py  arrays.py  indices.py
openeo_processes_dask_ml/process_implementations/utils/: dask_coordination.py  dim_utils.py  model_cache_utils.py  proc_expression_utils.py  slurm_utils.py  stac_utils.py
openeo_processes_dask_ml/specs/openeo-processes-ml/: ml_fit.json  mlm_class_random_forest.json  save_ml_model.json
tests/: test_datamodel.py  test_datamodel_sklearn.py  test_minibackend.py  test_rf_class_workflow.py
tests/cassettes/test_rf_class_workflow/: test_fit_model.yaml  test_fit_model_default_values.yaml  test_fit_model_default_values[None].yaml  test_fit_model_no_temporal.yaml  test_fit_model_no_temporal[None].yaml  test_init_model.yaml  test_init_model_default_values.yaml
tests/dummy/: dummy_ml_model.py
tests/overrides/: test_aggregate.py
tests/utils/: test_model_cache_utils.py  test_proc_expression_utils.py
tests/utils_for_testing/: tmp_folder.py
