[tool.poetry]
name = "openeo-processes-dask-ml"
version = "0.1.0"
description = "Implementation for openEO ML processes, built to extend openeo-processes-dask"
authors = ["Jonas Hurst <jhurst@uni-muenster.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
openeo-processes-dask = {extras = ["implementations"], version = "^2025.7.1"}
boto3 = "^1.38.14"
stackstac = "^0.5.1"
# remove this once mlm-extension is merged into upstream pystac, and openeo-processes-dask allows this as depdendency
pystac = {git = "https://github.com/jonas-hurst/pystac", rev = "v1.11OWN"}
brotli = "^1.2.0"
torch = {version = "2.7.0", optional = true}
onnx = {version = "^1.18.0", optional = true}
onnxruntime-gpu = {version = "^1.22.0", optional = true}
scikit-learn = {version = "^1.8.0", optional = true}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
pytest-recording = "^0.13.4"
matplotlib = "^3.10.3"
black = "^25.1.0"
pre-commit = "^4.2.0"
notebook = "^7.4.4"
graphviz = "^0.21"
dask-labextension = "^7.0.0"
dask-jobqueue = "^0.9.0"
pytest-cov = "^7.0.0"

[tool.poetry.extras]
torch = ["torch"]
onnx = ["onnx", "onnxruntime-gpu"]
scikit-learn = ["scikit-learn"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
#filterwarnings = ["error"]
#addopts = "--block-network --record-mode=none"
addopts = "--block-network --record-mode=new_episodes --cov=openeo_processes_dask_ml --cov=minibackend --cov-report=html"
